# gsnake-levels

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/hooks/: README.md  pre-commit
.github/workflows/: ci.yml  test.yml
docs/: playback-generation-performance-baseline.md  solver-performance-baseline.md
levels/easy/: level-1769977122223-g36bwe.json  level-1769978263873-eupaj5.json  level_001.json  level_002.json  level_003.json  levels.toml
levels/hard/: level-1769977459516-uoh6te.json  level-1769977886852-17yfz6.json  level-1769978661806-v473pq.json  level_001.json  level_002.json  level_003.json  level_004.json  levels.toml
levels/medium/: level-1769975926647-nv3aqb.json  level-1769976243963-g777pk.json  level-1769976545160-dvt1ot.json  level_001.json  level_002.json  level_003.json  level_004.json  levels.toml
playbacks/easy/: level-1769977122223-g36bwe.json  level-1769978263873-eupaj5.json  level_001.json  level_002.json  level_003.json
playbacks/hard/: level-1769977459516-uoh6te.json  level-1769977886852-17yfz6.json  level-1769978661806-v473pq.json  level_001.json  level_002.json  level_003.json  level_004.json
playbacks/medium/: level-1769975926647-nv3aqb.json  level-1769976243963-g777pk.json  (+5 more)
scripts/: coverage.sh
src/: analysis.rs  generate.rs  levels.rs  lib.rs  main.rs  migration.rs  name_generator.rs  playback.rs  playback_generator.rs  render.rs  solver.rs  sync_metadata.rs  test_cwd.rs  toml_generator.rs  validate_levels_toml.rs  verify.rs  verify_all.rs
tests/: cli_error_paths_test.rs  integration_test.rs
