[package]
name = "gsnake-levels"
version = "0.1.0"
edition = "2021"
default-run = "gsnake-levels"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Use gsnake-core as a git dependency for standalone builds
# In root repo, this will be overridden by local path via .cargo/config.toml (see US-007)
[dependencies.gsnake-core]
git = "https://github.com/nntin/gsnake"
branch = "main"
package = "gsnake-core"

[dev-dependencies]
tempfile = "3.13"
